plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation(group: 'org.jetbrains', name: 'annotations', version: '23.0.0')
    implementation(group: 'org.fxmisc.richtext', name: 'richtextfx', version: '0.10.9')
    implementation(group: 'org.json', name: 'json', version: 'latest.release')
    implementation(group: 'com.google.code.gson', name: "gson", version: '2.9.0')
    implementation(group: 'commons-io', name: 'commons-io', version: '2.11.0')
    implementation(group: 'com.github.Vatuu', name: 'discord-rpc', version: '1.6.2')
    implementation(group: 'com.panemu', name: 'tiwulfx-dock', version: '0.2')
    implementation(group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0')
    implementation(group: 'io.github.palexdev', name: 'materialfx', version: '11.14.0-EA3')
    implementation(group: 'com.github.dhiraj072', name: 'random-word-generator', version: '1.1.0')
    implementation(group: 'org.apache.xmlgraphics', name: 'batik-transcoder', version: '1.14')
    implementation(group: 'de.codecentric.centerdevice', name: 'javafxsvg', version: '1.3.0')
}

javafx {
    version = "17.0.1"
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.swing', 'javafx.graphics', 'javafx.web']
}

run {
    if (javafx.platform.classifier == 'win') {
        // Temporary fix for Eclipse with JDK 1.8 and Windows
        systemProperty "java.library.path", "C:\\tmp"
    }
}

jar {
    manifest {
        attributes(
                'Main-Class': 'io.github.railroad.Startup'
        )
    }
}

sourceCompatibility = JavaVersion.VERSION_19
